tests/error/type_match/base_case_rvalue_to_lvalue_ref1.bz
// error: unable to match rvalue expression of type 'int32' to an lvalue reference '&auto'
function test()
{
	let _: &auto = 0i32;
}
